testsuite/tests/checks/implicit_small/test.out
decls.ads:3:9: error: Implicit_Small - rule violation
3 |    type Fraction1 is delta 0.01 range -1.0 .. 1.0; --  FLAG
  |         ^^^^^^^^^ 

